# Team-086-Product

./: README.md  db.sqlite3  manage.py  pyproject.toml
.confidential/: ci.json  default.json
.github/: ci.yml
.github/workflows/: main.yml
admin-2-theme/: forgot-password.html
apps/common/: forms.py  views.py
apps/userProfile/: admin.py  models.py
apps/userProfile/migrations/: 0001_initial.py  0002_profile_profile_image.py
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/assets/: index.js
frontend/src/components/home/: index.js
github/actions/: workflow
mfdw_site/: db.sqlite3
mfdw_site/mfdw_site/: settings.py  urls.py
mfdw_site/mfdw_site/static/css/: sb-admin-2.min.css
mfdw_site/mfdw_site/templates/: base.html
mfdw_site/pages/: admin.py  models.py  views.py
mfdw_site/pages/migrations/: 0001_initial.py
mfdw_site/pages/templates/pages/: page.html
smeTracker/: manage.py
smeTracker/smeTracker/: asgi.py  settings.py  urls.py  wsgi.py
sme_main/: asgi.py  settings.py  urls.py  wsgi.py
smes_tracker/: manage.py
smes_tracker/smes_tracker/: asgi.py  settings.py  urls.py  wsgi.py
static/: gulpfile.js
static/css/: sb-admin-2.css
static/date-time-phone/: README.md  jquery-ui.js
templates/: base.html  example.html
templates/common/: dashboard.html  home.html  login.html  register.html
templates/common/password-reset/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
tests/: test_src.py
(+4 files in other folders)
