[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = [
    "Authors Here"
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
confidential = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
pytest-xdist = "^1.32.0"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.poetry.scripts]
app = 'src.app:run'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

